# Diploma-munka

./: .env.example  .gitignore  AARONIA_INTEGRATION.md  ANOMALY_PIPELINE.md  ARCHITECTURE.md  BACKUP_RESTORE.md  CLAUDE.md  CONTEXT_GROUNDED_ASSISTANT.md  CURRENT_STATE_REPORT.md  FINAL_AUDIT.md  HARDWARE_AUTODETECT.md  KISMET_DOCKER_INTEGRATION.md  KNOWN_SIGNALS.md  LIVE_STABILIZATION_BASELINE.md  LIVE_STABILIZATION_CHECKPOINT.md  MAJOR_REFACTOR_REPORT.md  MIGRATION.md  ML_CLASSIFIER.md  MONITORING.md  PACKAGE_CONTENTS.md  PHASE2_IMPLEMENTATION_REPORT.md  PHASE_1_11_REVIEW.md  PHASE_COMPARISON.md  PHASE_PROGRESS.md  PRODUCTION_READINESS_BASELINE.md  PRODUCTION_READINESS_REPORT.md  PROJECT_AUDIT.md  PROJECT_HISTORY.md  Phase.md  RAG.md  README.md  REALTIME_DEMOD_PASSBAND.md  RECORDING_FORMATS.md  REFACTOR_BASELINE.md  REFACTOR_CUTMAP.md  REFACTOR_SHARED_STATE.md  REFERENCE_IMPORT.md  RF_AGENT.md  RUNNING.md  SDRANGEL_INTEGRATION.md  (+16 more)
config/: hp-demo.env  iq-frame.schema.json  production-hardware.env  recording-metadata.schema.json  spectrum-frame.schema.json
data/nmhh_reference_csv_for_codex/: codex_reference_import_note.txt  nmhh_spectrum_reference_temp_0hz_24ghz.csv  site_baseline_manual_entry_template.csv
data/samples/: bettercap_ble_sample.json  kismet_sample.csv  kismet_sample.json
database/: Dockerfile  README.md
database/init/: 001_apply_migrations.sql.disabled
database/migrations/: 001_initial_schema.sql  002_device_import_tables.sql  003_reference_layers.sql  004_reference_band_nmhh_fields.sql  005_measurement_sessions.sql  006_kismet_wifi_alignment.sql  007_bettercap_ble_alignment.sql  008_spectrum_recordings.sql  009_rag_vector_index.sql  010_operational_metadata.sql  011_known_signals.sql  012_reference_catalog.sql  013_detection_alert_workflow.sql  014_query_indexes.sql  015_cursor_pagination_indexes.sql  016_rag_embedding_profiles.sql  017_wifi_device_type.sql  018_bluetooth_vendor_metadata.sql  019_wifi_bluetooth_identity_confidence.sql  020_wifi_management_frames_and_device_baseline.sql  021_unified_reference_sets.sql  022_system_alerts_session_link.sql
deploy/systemd/: README.md  diploma-rf-agent.service  dm-rf-agent.service  rf-agent.env.example  sdrangel.env.example  sdrangelsrv.service
docker/bettercap/: Dockerfile  start-bettercap.sh
docker/frontend/: Dockerfile
docker/kismet/: Dockerfile  start-kismet.sh
docker/rf-agent/: Dockerfile
docs/: architecture.dot
ml/: README.md  build_dataset.py  split_manifest.py  train_classical.py  train_cnn.py
nginx/: default.conf
prometheus/: prometheus.yml
python-processor/: Dockerfile  main.py  requirements.txt
python-processor/app/: __init__.py  application.py  assistant.py  config.py  db.py  logging_config.py  metrics.py  rag.py  rf_agent_client.py  runtime.py  schemas.py  security.py  streaming.py
python-processor/scripts/: hash_api_token.py
python-processor/static/: app.css  demod-passband.js  import.html  index.html  maxhold-controller.js  nmhh-frequency-allocations.json  rag.css  rag.js  spectrum-frame-adapter.js  spectrum-view-model.js  system-tabs.css  system-tabs.js  viewport-controller.js
python-processor/tests/: test_anomaly_pipeline.py  test_assistant.py  test_bettercap_live_integration.py  test_bluetooth_vendor_metadata.py  test_kismet_history_dedupe.py  test_kismet_wifi_device_type.py  test_known_signals.py  test_management_frames_and_baseline.py  test_ml.py  test_pagination.py  test_rag.py  test_recording_dataset.py  test_recordings.py  test_reference_importers.py  test_reference_match.py  test_reference_set_export_shape.py  test_rf_agent_client.py  test_rf_agent_viewport.py  test_sdrangel_demod_update.py  test_sdrangel_iq_pipeline.py  test_security.py  test_spectrum_ingest_source.py  test_uploads.py  test_wifi_security_events.py
recordings/: README.md
rf-agent/: CMakeLists.txt  README.md
rf-agent/include/rf_agent/: aaronia_probe_runner.hpp  aaronia_rf_source.hpp  agent.hpp  auto_rf_source.hpp  frame_json.hpp  http_server.hpp  mock_rf_source.hpp  models.hpp  recording_writer.hpp  replay_rf_source.hpp  rf_source.hpp  sdrangel_client.hpp  sdrangel_demod_settings.hpp  soapy_rf_source.hpp  usrp_probe_runner.hpp
rf-agent/include/rf_agent/dsp/: fft_pipeline.hpp
rf-agent/src/: aaronia_probe_main.cpp  aaronia_probe_runner.cpp  aaronia_rf_source.cpp  aaronia_worker_main.cpp  agent.cpp  auto_rf_source.cpp  frame_json.cpp  http_server.cpp  main.cpp  mock_rf_source.cpp  models.cpp  recording_writer.cpp  replay_rf_source.cpp  rf_source.cpp  sdrangel_client.cpp  sdrangel_demod_settings.cpp  soapy_rf_source.cpp  usrp_probe_main.cpp  usrp_probe_runner.cpp
rf-agent/src/dsp/: fft_pipeline.cpp
rf-agent/tests/: probe_test_child.cpp  test_aaronia_probe_runner.cpp  test_aaronia_rf_source.cpp  test_fft_pipeline.cpp  test_mock_rf_source.cpp  test_models.cpp  test_recording_writer.cpp  test_replay_rf_source.cpp  test_sdrangel_client.cpp  test_sdrangel_demod_settings.cpp  test_source_manager.cpp  test_usrp_probe_runner.cpp  worker_test_child.cpp
scripts/: acceptance-test.sh  backup.sh  check_release_package.py  docker-audit.sh  docker-cleanup.sh  extract-nmhh-frequency-bands.py  lib.sh  mock-load-fixture.py  offline-acceptance.sh  ollama-setup.sh  orphan-audit.sh  post-migration-check.sh  pre-migration-check.sh  restore.sh  run-migrations.sh  websocket-smoke.py
spectrum-ingest/: Dockerfile  README.md  app.py  requirements.txt  test_app.py
tests/: test_openapi_snapshot.py  test_release_package.py
tests/api/: test_assistant_api.py  test_ml_api.py  test_operational_metadata.py  test_rag_api.py  test_rf_agent_rest.py
tests/fixtures/: openapi_snapshot.json  reference_set_export_golden.json
tests/frontend/: spectrum-frame-adapter.test.html  test_band_popover_view.js  test_canvas_util.js  test_demod_passband.js  test_device_observation_view.js  test_html_util.js  test_maxhold_controller.js  test_observation_format.js  test_spectrum_data.js  test_spectrum_model.js  test_spectrum_scale.js  test_ui_static.py  test_viewport_controller.js  test_viewport_wiring.js
(+75 files in other folders)
